--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
               </a>
             </li>
             <li>
-              <a target="_blank" href="https://www.youtube.com" ,>
+              <a target="_blank" href="https://www.youtube.com/channel/UCbFMv3ngpiXSF6a0B_c3BaA" ,>
                 <svg
                   width="32"
                   height="32"
